--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Ignore everything inside docs/
+docs/*
+
+# But keep index.md
+!docs/index.md
+
